objects/Blue_star_Account_Products__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Display_Prefix__c</fullName>
        <label>Display Prefix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Blue star Account Reservation Products</label>
</CustomObject>